update award page

--- a/award.html
+++ b/award.html
@@ -58,7 +58,7 @@
       <p>高橋亮(東大)，雪田 和歌子(東大)，横田 知之(東大)，染谷 隆夫(東大)，川原圭博(東大)</p>
       <h2>最優秀発表賞（プログラム委員）</h2>
       <p>プログラム委員による，査読あり登壇発表に対する投票で決定</p>
-      <h3>Crane：プロダクトの機能性・可折性・可製造性を考慮した折紙の計算設計プラットフォーム</h3>
+      <h3>Crane：プロダクトの意匠性・可折性・可製造性を考慮した折紙の計算設計プラットフォーム</h3>
       <p>須藤海(東大)，野間裕太(東大)，谷道鼓太朗(Nature Architects)，鳴海紘也(東大)，舘知宏(東大)</p>
       <h2>最優秀発表賞（一般）</h2>
       <p>参加者による，査読あり登壇発表に対する投票で決定</p>
