--- a/program.html
+++ b/program.html
@@ -265,7 +265,7 @@
             <li class="list-inline-item"><b>チャット座長：</b>大西 鮎美</li>
           </ul>
         </div>
-        <h4>[04] Crane：プロダクトの機能性・可折性・可製造性を考慮した折紙の計算設計プラットフォーム <span class="badge badge-short">ショート発表</span></h4>
+        <h4>[04] Crane：プロダクトの意匠性・可折性・可製造性を考慮した折紙の計算設計プラットフォーム <span class="badge badge-short">ショート発表</span></h4>
         <p class="authors">須藤海(東大)，野間裕太(東大)，谷道鼓太朗(Nature Architects)，鳴海紘也(東大)，舘知宏(東大)</p>
         <div class="row">
           <div class="col-md-4"><img class="img-fluid img-thumbnail representative" src="./assets/representatives/04.jpg"></div>
