update committee page

--- a/committee.html
+++ b/committee.html
@@ -398,13 +398,13 @@
             <li><b>専門：</b>ヒューマンコンピュータインタラクション（HCI），エンタテインメントコンピューティング</li>
           </ul>
         </div>
-        <div class="col-md-2 col-4"><img class="img-fluid rounded" src="./assets/committee/placeholder.jpg" style="margin-bottom: 10px;">
+        <div class="col-md-2 col-4"><img class="img-fluid rounded" src="./assets/committee/miyafuji.jpg" style="margin-bottom: 10px;">
           <h6> 宮藤 詩緒
             
           </h6>
           <ul class="list-unstyled">
             <li><b>所属：</b>東京工業大学</li>
-            <li><b>専門：</b></li>
+            <li><b>専門：</b>ヒューマンコンピュータインタラクション（HCI），プロジェクションマッピング，遠隔協調作業</li>
           </ul>
         </div>
         <div class="col-md-2 col-4"><img class="img-fluid rounded" src="./assets/committee/murao.jpg" style="margin-bottom: 10px;">
